--- a/oxygen-framework/css/conbat/show-default-marker.less
+++ b/oxygen-framework/css/conbat/show-default-marker.less
@@ -6,14 +6,14 @@
  *  - explicit content is empty
  * 	- the element is not hidden (in this case it is obvious that the auther can add explicit content)
  *  */
-*[class~="topic/p"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/ph"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/sli"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/stentry"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/title"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/dd"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/dt"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
-*[class~="topic/section"][*|default-content]:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}) {
+*[class~="topic/p"		][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/ph"		][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/sli"	][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/stentry"][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/title"	][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/dd"		][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/dt"		][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/section"][*|default-content]:not([*|popup-edit='#text']):not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}) {
 	content: " (default)";
 	.author-only-text-style()
 }
