added outputclass for advanced-key-ref: "key-colon-name-quoted"

--- a/oxygen-framework/css/advanced-keyref.less
+++ b/oxygen-framework/css/advanced-keyref.less
@@ -74,7 +74,9 @@
 *[*|ref][outputclass='key-name-dashed']:after(@{keyref-name-suffix-index}),
 *[*|ref][outputclass='key-name-dashed!']:after(@{keyref-name-suffix-index}),
 *[*|ref][outputclass='name']:after(@{keyref-name-suffix-index}),
-*[*|ref][outputclass='name!']:after(@{keyref-name-suffix-index}) {
+*[*|ref][outputclass='name!']:after(@{keyref-name-suffix-index}),
+*[*|ref][outputclass='key-colon-name-quoted']:after(@{keyref-name-suffix-index}),
+*[*|ref][outputclass='key-colon-name-quoted!']:after(@{keyref-name-suffix-index}) {
 	content: 			oxy_link-text();
 	background-color:	@keyref-autotext-background-color;
 }
