allow combination of implicit-keydef with dl-outputclass "bullet-list-dashes"

--- a/oxygen-framework/css/config.less
+++ b/oxygen-framework/css/config.less
@@ -60,6 +60,7 @@
 @table-header-padding-right		: 5px;
 
 /* dl */
+@dt-outputclass-suffix-index	: 20;
 @dd-default-margin-left			: 4ex;
 @dl-tree-dd-offset				: 360pt;
 @dl-tree-dd-indent				: 24pt;
