--- a/oxygen-framework/css/config.less
+++ b/oxygen-framework/css/config.less
@@ -19,7 +19,7 @@
 @csli-comma-index						: 19;	/* used in :before(n) for generated commas in comma separated lists */
 @code-font-family						: "Courier New", Monospace;
 @body-font-family						: "Palatine Linotype", Serif;
-@topic-title-font-family				: "Franklin Gothic Medium", Arial;
+@topic-title-font-family				: "Palatine Linotype", Serif;
 @topic-title-font-size					: 1.8em;
 @code-font-size-scale					: 0.9;
 @keydef-info-prefix-index				: 2;
