--- a/oxygen-framework/css/outputclasses/dl-outputclasses.less
+++ b/oxygen-framework/css/outputclasses/dl-outputclasses.less
@@ -83,10 +83,10 @@
 	display				: table;
     width				: 95%;
     margin				: 1.5ex 0.5ex;
-    border-color		: black;
+    /*border-color		: black;
     border-top-style	: double;
     border-bottom-style	: double;
-    border-width		: 4px;
+    border-width		: 4px;*/
     padding				: 0px;
 }
 
@@ -94,17 +94,31 @@
 	display				: table-row;
 }
 
-
 *[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry'] > *[class~='topic/dd'],
 *[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry'] > *[class~='topic/dt'] {
 	display				: table-cell;
     padding				: 1px 10px;
 }
+
 *[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry']:not(:first-child) > *[class~='topic/dd'],
 *[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry']:not(:first-child) > *[class~='topic/dt'] {
-    border-color		: black;
+    border-top-color	: black;
     border-top-style	: solid;
-    border-width		: 1px;
+    border-top-width	: 1px;
+}
+
+*[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry']:first-child > *[class~='topic/dd'],
+*[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry']:first-child > *[class~='topic/dt'] {
+    border-top-color	: black;
+    border-top-style	: double;
+    border-top-width	: 4px;
+}
+
+*[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry']:last-child > *[class~='topic/dd'],
+*[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry']:last-child > *[class~='topic/dt'] {
+    border-bottom-color	: black;
+    border-bottom-style	: double;
+    border-bottom-width	: 4px;
 }
 
 *[class~='topic/dl'][outputclass~='header-table'] > *[class~='topic/dlentry'] > *[class~='topic/dt'] {
